--- a/style.css
+++ b/style.css
@@ -39,10 +39,12 @@ em{
 /*Class*/
 
 .container{
-    display: block;
-    min-width: 1200px;
-    margin: auto;
-    padding:0 200px ;
+    width: 100%;
+    text-align: center;
+}
+.container ul {
+    display: flex;
+    flex-flow: row wrap;
 }
 
 .title{
@@ -56,6 +58,11 @@ em{
     min-height: 100vh;
     display: flex;
     flex-direction: column;
+}
+.vp-container .vp-logo img{
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
 }
 
 header{
@@ -113,19 +120,20 @@ header a{
 }
 
 .vp-content{
-    min-width: 800px;
+    max-width: 800px;
     text-align: center;
     color: white;
 }
 
 .vp-content h1{
-    font-size: 3rem;
+    font-size: 34px;
     margin-bottom: 1rem;
+    text-align: center;
 }
 
 
 .vp-content p{
-    font-size: 1.8rem;
+    font-size: clamp(20px , 2vw , 24px);
     margin-bottom: 1.5rem;
     font-weight: 300;
     letter-spacing: 1px;
@@ -141,7 +149,7 @@ header a{
 
 .offer ul{
     display: flex;
-    flex-flow: row nowrap;
+    flex-flow: row wrap;
     justify-content: space-between;
 }
 
@@ -149,7 +157,6 @@ header a{
     border: 1px solide #ddd;
     background: white;
     margin: 1rem;
-    flex: 1;
 }
 .offer-elem-img{
     width: 100%;
@@ -174,13 +181,11 @@ header a{
 
 .who{
     display: flex;
-    flex-flow: row nowrap;
+    flex-flow: row wrap;
 }
 
 
-.who-content-img{
-    flex: 1;
-}
+
 
 
 .who-content-img img{
