--- a/style.mobile.css
+++ b/style.mobile.css
@@ -18,12 +18,12 @@ header ul li {
 }
 
 .vp-content h1 {
-    font-size: 1.5rem;
+    
+    margin: 0 10px;
     margin-bottom: 0.5rem;
 }
 
 .vp-content p {
-    font-size: 1rem;
     font-weight: 300;
 }
 
